2011-12-18  Murray Cumming  <murrayc@murrayc.com>

	PostgreSQL: Print stderr message when the connection fails completely.

	* glom/libglom/connectionpool_backends/postgres.cc: This can provide 
	a clue, for instance when the hostname cannot be resolved.

2011-12-18  Murray Cumming  <murrayc@murrayc.com>

	Add the glom_test_connection command-line tool.

	* Makefile_libglom.am:
	* glom/glom_test_connection.cc: This is useful for sanity checking 
	of the configuration of central PostgreSQL servers.

2011-12-16  Murray Cumming  <murrayc@murrayc.com>

	Film Manager example: Use English for Day/Night choices.

	* examples/example_film_manager.glom: Use English for the custom choice 
	values. We need to allow these to be translated. See bug #666343

2011-12-14  Murray Cumming  <murrayc@murrayc.com>

	Document: Added get_translation_available_locales().

	* glom/libglom/document/document.[h|cc]: load_after(), 
	load_after_translations(): Remember any new locales encountered, so 
	that get_translation_available_locales() can later return the list.
	This could help with OnlineGlom bug #666165 .		
	* tests/test_document_load_translations.cc: Test the new method.

2011-12-13  Murray Cumming  <murrayc@murrayc.com>

	Correct parsing of example data.

	* glom/libglom/data_structure/field.[h|cc]: to_file_format(),
	from_file_format() documentation: Mention that this uses CSV format.
	from_file_format(): Unescape double quotes, because we escape quotes
	as that in to_file_format().
	This avoids reading them as double quotes when opening an example file.
	This will also correct the interpretation of text default values.
	* Makefile_tests.am:
	* tests/test_field_file_format.cc: Add a test of this for text and image
	data, checking that what we write is what we read.

2011-12-13  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_then_image: Move some code to test_utils.

	* Makefile_tests.am:
	* tests/test_selfhosting_new_then_image.cc: Move the test image-loading